# contracts/openapi/v1.json
@@ -641,50 +641,29 @@
           },
           {
             "in": "header",
-            "name": "X-CSRF-Token",
-            "required": false,
+            "name": "Origin",
+            "required": true,
             "schema": {
-              "anyOf": [
-                {
-                  "type": "string"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "X-Csrf-Token"
+              "title": "Origin",
+              "type": "string"
             }
           },
           {
             "in": "header",
-            "name": "Origin",
-            "required": false,
+            "name": "X-CSRF-Token",
+            "required": true,
             "schema": {
-              "anyOf": [
-                {
-                  "type": "string"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "Origin"
+              "title": "X-Csrf-Token",
+              "type": "string"
             }
           },
           {
             "in": "header",
             "name": "If-Match",
-            "required": false,
+            "required": true,
             "schema": {
-              "anyOf": [
-                {
-                  "type": "string"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "If-Match"
+              "title": "If-Match",
+              "type": "string"
             }
           }
         ],
@@ -829,50 +808,29 @@
         "parameters": [
           {
             "in": "header",
-            "name": "X-CSRF-Token",
-            "required": false,
+            "name": "Origin",
+            "required": true,
             "schema": {
-              "anyOf": [
-                {
-                  "type": "string"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "X-Csrf-Token"
+              "title": "Origin",
+              "type": "string"
             }
           },
           {
             "in": "header",
-            "name": "Origin",
-            "required": false,
+            "name": "X-CSRF-Token",
+            "required": true,
             "schema": {
-              "anyOf": [
-                {
-                  "type": "string"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "Origin"
+              "title": "X-Csrf-Token",
+              "type": "string"
             }
           },
           {
             "in": "header",
             "name": "If-Match",
-            "required": false,
+            "required": true,
             "schema": {
-              "anyOf": [
-                {
-                  "type": "string"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "If-Match"
+              "title": "If-Match",
+              "type": "string"
             }
           },
           {
@@ -1046,17 +1004,10 @@
           {
             "in": "header",
             "name": "Origin",
-            "required": false,
+            "required": true,
             "schema": {
-              "anyOf": [
-                {
-                  "type": "string"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "Origin"
+              "title": "Origin",
+              "type": "string"
             }
           }
         ],
@@ -1231,50 +1182,29 @@
           },
           {
             "in": "header",
-            "name": "X-CSRF-Token",
-            "required": false,
+            "name": "Origin",
+            "required": true,
             "schema": {
-              "anyOf": [
-                {
-                  "type": "string"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "X-Csrf-Token"
+              "title": "Origin",
+              "type": "string"
             }
           },
           {
             "in": "header",
-            "name": "Origin",
-            "required": false,
+            "name": "X-CSRF-Token",
+            "required": true,
             "schema": {
-              "anyOf": [
-                {
-                  "type": "string"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "Origin"
+              "title": "X-Csrf-Token",
+              "type": "string"
             }
           },
           {
             "in": "header",
             "name": "If-Match",
-            "required": false,
+            "required": true,
             "schema": {
-              "anyOf": [
-                {
-                  "type": "string"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "If-Match"
+              "title": "If-Match",
+              "type": "string"
             }
           }
         ],
@@ -1465,34 +1395,20 @@
         "parameters": [
           {
             "in": "header",
-            "name": "X-CSRF-Token",
-            "required": false,
+            "name": "Origin",
+            "required": true,
             "schema": {
-              "anyOf": [
-                {
-                  "type": "string"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "X-Csrf-Token"
+              "title": "Origin",
+              "type": "string"
             }
           },
           {
             "in": "header",
-            "name": "Origin",
-            "required": false,
+            "name": "X-CSRF-Token",
+            "required": true,
             "schema": {
-              "anyOf": [
-                {
-                  "type": "string"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "Origin"
+              "title": "X-Csrf-Token",
+              "type": "string"
             }
           },
           {
@@ -1773,17 +1689,10 @@
           {
             "in": "header",
             "name": "Origin",
-            "required": false,
+            "required": true,
             "schema": {
-              "anyOf": [
-                {
-                  "type": "string"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "Origin"
+              "title": "Origin",
+              "type": "string"
             }
           }
         ],
